添加应用程序图标和 Inno Setup 安装脚本
- 设置 WPF 应用程序图标 (logo.ico)
- 添加应用程序图标到项目文件
- 创建 Inno Setup 安装脚本 (MarkdownTool-Setup.iss)
- 更新 .gitignore 忽略安装程序输出目录
- 支持中英文安装向导
- 自动文件关联 (.md, .markdown)
- 右键菜单集成

--- a/MarkdownTool/MarkdownTool.csproj
+++ b/MarkdownTool/MarkdownTool.csproj
@@ -7,12 +7,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>logo\logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.37.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2792.45" />
     <PackageReference Include="WPF-UI" Version="3.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="logo\logo.ico" />
   </ItemGroup>
 
 </Project>
